@@ -2,6 +2,7 @@
 
 x.x:
 
+- added: index widget to show only SAML logins
 - fixed: SAML icon now loads correctly
 
 1.0 (2012-12-27):
